--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,15 @@
     display: flex;
     justify-content: center;
 }
+.dot {
+    width: 10px;
+    height: 10px;
+    background-color: #ccc;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.dot.active {
+    background-color: #333;
+}
